cloneCollectionAsCapped should handle WriteConflictException

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.3
    • Affects Version/s: 3.0.0-rc6
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Quint Iteration 3.1.2, Quint Iteration 3
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Like SERVER-17061, this command should be robust to WriteConflictException. Unlike the commands in SERVER-17061, these commands depend at least on SERVER-17062, which makes query execution robust to WriteConflictException.

            Assignee:
            Geert Bosch
            Reporter:
            Andy Schwerin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: