SERVER-17075: Handle WCE in cloneCollectionAsCapped